--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,8 +7,8 @@ on:
     - main
     
 env:
-  AZURE_WEBAPP_NAME: NetsuiteBPIIntegration20230414203211
-  AZURE_WEBAPP_PACKAGE_PATH: "./publish"
+  AZURE_FUNCTION_NAME: NetsuiteBPIIntegration20230414203211
+  AZURE_FUNCTION_PACKAGE_PATH: "./publish"
 
 jobs:
   publish:
@@ -29,13 +29,13 @@ jobs:
         run: dotnet build ./Netsuite.BPIIntegration.sln --configuration Release --no-restore
         
       - name: Publish
-        run: dotnet publish ./Netsuite.BPIIntegration.sln --configuration Release --no-build --output '${{ env.AZURE_WEBAPP_PACKAGE_PATH }}'
+        run: dotnet publish ./Netsuite.BPIIntegration.sln --configuration Release --no-build --output '${{ env.AZURE_FUNCTION_PACKAGE_PATH }}'
         
       - name: Deployment
         uses: azure/functions-action@v1
         with:
-          app-name: ${{ env.AZURE_WEBAPP_NAME }}
+          app-name: ${{ env.AZURE_FUNCTION_NAME }}
           publish-profile: ${{ secrets.AZURE_PUBLISH_PROFILE }}
-          package: "${{ env.AZURE_WEBAPP_PACKAGE_PATH }}"
+          package: "${{ env.AZURE_FUNCTION_PACKAGE_PATH }}"
 
         
