--- a/Netsuite.BPIIntegration/Netsuite.BPIIntegration.csproj
+++ b/Netsuite.BPIIntegration/Netsuite.BPIIntegration.csproj
@@ -12,6 +12,9 @@
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="4.1.1" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Netsuite.Services\Netsuite.Services.csproj" />
+  </ItemGroup>
+  <ItemGroup>
     <None Update="host.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
