--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,7 @@ on:
 env:
   AZURE_FUNCTION_NAME: NetsuiteBPIIntegration20230414203211
   AZURE_FUNCTION_PACKAGE_PATH: "./publish"
-  message: ${{ secrets.MESSAGE }}
+  Values__Message: ${{ secrets.MESSAGE }}
 
 jobs:
   publish:
