--- a/NetSuite.Testing/NetSuite.Testing.csproj
+++ b/NetSuite.Testing/NetSuite.Testing.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Netsuite.BPIIntegration\Netsuite.BPIIntegration.csproj" />
+    <ProjectReference Include="..\Netsuite.Services\Netsuite.Services.csproj" />
   </ItemGroup>
 
 </Project>
