--- a/NetSuiteTriggerFunction.BPIIntegration/NetSuiteTriggerFunction.BPIIntegration.csproj
+++ b/NetSuiteTriggerFunction.BPIIntegration/NetSuiteTriggerFunction.BPIIntegration.csproj
@@ -4,16 +4,14 @@
     <AzureFunctionsVersion>v4</AzureFunctionsVersion>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="BlobHelper" Version="4.0.4" />
+    <PackageReference Include="Microsoft.ApplicationInsights.WorkerService" Version="2.15.0" />
     <PackageReference Include="Microsoft.Azure.Functions.Extensions" Version="1.1.0" />
+    <PackageReference Include="Microsoft.Azure.WebJobs.Extensions.EventGrid" Version="3.0.0-beta.3" />
     <PackageReference Include="Microsoft.Azure.WebJobs.Extensions.Storage" Version="5.0.1" />
-    <PackageReference Include="Microsoft.Extensions.Configuration" Version="6.0.0" />
-    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="6.0.0" />
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="4.1.1" />
-    <PackageReference Include="PgpCore" Version="5.10.0" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Netsuite.Core\Netsuite.Core.csproj" />
     <ProjectReference Include="..\Netsuite.Services\Netsuite.Services.csproj" />
   </ItemGroup>
   <ItemGroup>
